[package]
name = "rs-web-lib"
authors = ["MeekloWebb <Michelangelo.Webb@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
optimize = ["log/release_max_level_warn"]
web = ["wgpu/webgl"]
default = ["optimize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pixels = "0.9.0"
wgpu = "0.12"
winit = "0.26"
winit_input_helper = "0.12"
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
tokio = { version = "1", features = ["full"] }